force-app/main/default/objects/Offer_Letter__c/Offer_Letter__c.object-meta.xml
<CustomObject>
    <label>Offer Letter</label>
    <nameField>
        <label>Offer Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>