force-app/main/default/objects/Offer_Letter__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Offer Letters</relationshipLabel>
    <relationshipName>Offer_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>