force-app/main/default/objects/Offer_Letter__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Offer Letters</relationshipLabel>
    <relationshipName>Offer_Letters</relationshipName>
    <type>Lookup</type>
</CustomField>